--- a/TomMotos/Properties/Resources.resx
+++ b/TomMotos/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="9aa5e10b-b8d6-4e13-a4de-839ba6ad8e42" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\9aa5e10b-b8d6-4e13-a4de-839ba6ad8e42.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SAM_3321" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SAM_3321.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
